# rust-bio-types

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflow/: rust.yml
.github/workflows/: release-please.yml  rust.yml
src/: alignment.rs  distancematrix.rs  genome.rs  lib.rs  phylogeny.rs  sequence.rs  strand.rs  variant.rs
src/annot/: contig.rs  loc.rs  mod.rs  pos.rs  refids.rs  spliced.rs
src/sequencing/: mod.rs  read_pair_orientation.rs
